--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <header>
       <img src="./Resources/Images/img-tea-cozy-logo.png" alt="logo">
       <div class="nav">
-        <span><a href="">Mission</a></span>
-        <span><a href="">Featured Tea</a></span>
-        <span><a href="">Locations</a></span>
+        <span><a href="#mission">Mission</a></span>
+        <span><a href="#products">Featured Tea</a></span>
+        <span><a href="#locations">Locations</a></span>
       </div>
     </header>
-    <div class="mission">
+    <div id="mission">
       <h2>Our Mission</h2>
       <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
     </div>
-    <div class="products">
+    <div id="products">
       <div>
         <h2>Tea of Month</h2>
         <h4>What's Steeping at The Tea Cozy?</h4>
@@ -46,7 +46,7 @@
         </div>
       </div>
     </div>
-    <div class="locations">
+    <div id="locations">
       <h2>Locations</h2>
       <div class="cards">
         <div class="locard">
